data split into training and testing data and logistic regression model complete

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -126,108 +126,27 @@
        "      <td>23000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77531</th>\n",
-       "      <td>19100.0</td>\n",
-       "      <td>11.261</td>\n",
-       "      <td>86600</td>\n",
-       "      <td>0.653580</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>56600</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77532</th>\n",
-       "      <td>17700.0</td>\n",
-       "      <td>10.662</td>\n",
-       "      <td>80900</td>\n",
-       "      <td>0.629172</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50900</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77533</th>\n",
-       "      <td>17600.0</td>\n",
-       "      <td>10.595</td>\n",
-       "      <td>80300</td>\n",
-       "      <td>0.626401</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50300</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77534</th>\n",
-       "      <td>16300.0</td>\n",
-       "      <td>10.068</td>\n",
-       "      <td>75300</td>\n",
-       "      <td>0.601594</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>45300</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77535</th>\n",
-       "      <td>15600.0</td>\n",
-       "      <td>9.742</td>\n",
-       "      <td>72300</td>\n",
-       "      <td>0.585062</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42300</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>77536 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
-       "0        10700.0          7.672            52800        0.431818   \n",
-       "1         8400.0          6.692            43600        0.311927   \n",
-       "2         9000.0          6.963            46100        0.349241   \n",
-       "3        10700.0          7.664            52700        0.430740   \n",
-       "4        10800.0          7.698            53000        0.433962   \n",
-       "...          ...            ...              ...             ...   \n",
-       "77531    19100.0         11.261            86600        0.653580   \n",
-       "77532    17700.0         10.662            80900        0.629172   \n",
-       "77533    17600.0         10.595            80300        0.626401   \n",
-       "77534    16300.0         10.068            75300        0.601594   \n",
-       "77535    15600.0          9.742            72300        0.585062   \n",
+       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+       "0    10700.0          7.672            52800        0.431818                5   \n",
+       "1     8400.0          6.692            43600        0.311927                3   \n",
+       "2     9000.0          6.963            46100        0.349241                3   \n",
+       "3    10700.0          7.664            52700        0.430740                5   \n",
+       "4    10800.0          7.698            53000        0.433962                5   \n",
        "\n",
-       "       num_of_accounts  derogatory_marks  total_debt  loan_status  \n",
-       "0                    5                 1       22800            0  \n",
-       "1                    3                 0       13600            0  \n",
-       "2                    3                 0       16100            0  \n",
-       "3                    5                 1       22700            0  \n",
-       "4                    5                 1       23000            0  \n",
-       "...                ...               ...         ...          ...  \n",
-       "77531               12                 2       56600            1  \n",
-       "77532               11                 2       50900            1  \n",
-       "77533               11                 2       50300            1  \n",
-       "77534               10                 2       45300            1  \n",
-       "77535                9                 2       42300            1  \n",
-       "\n",
-       "[77536 rows x 8 columns]"
+       "   derogatory_marks  total_debt  loan_status  \n",
+       "0                 1       22800            0  \n",
+       "1                 0       13600            0  \n",
+       "2                 0       16100            0  \n",
+       "3                 1       22700            0  \n",
+       "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,29 +157,27 @@
     "# df_lending_data = pd.read_csv(\"Resources/lending_data.csv\", index_col=\"loan_size\")\n",
     "\n",
     "# Review the DataFrame\n",
-    "df_lending_data"
+    "df_lending_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['loan_size', 'interest_rate', 'borrower_income', 'debt_to_income',\n",
-       "       'num_of_accounts', 'derogatory_marks', 'total_debt', 'loan_status'],\n",
-       "      dtype='object')"
+       "(77536, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_lending_data.columns"
+    "df_lending_data.shape"
    ]
   },
   {
@@ -272,24 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "y_variable = df_lending_data[\"loan_status\"]\n",
-    "\n",
+    "y = df_lending_data[\"loan_status\"]\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "x_variable = pd.DataFrame(df_lending_data[['loan_size', 'interest_rate', 'borrower_income', 'debt_to_income',\n",
-    "       'num_of_accounts', 'derogatory_marks', 'total_debt']])"
+    "X = df_lending_data.drop(columns=\"loan_status\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -303,19 +218,19 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "y_variable.head()"
+    "y.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -419,14 +334,14 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "x_variable.head()"
+    "X.head()"
    ]
   },
   {
@@ -438,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -449,14 +364,14 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "y_variable.value_counts()"
+    "y.value_counts()"
    ]
   },
   {
@@ -468,16 +383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58152, 7)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the train_test_learn module\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
+    "                                                    y, \n",
+    "                                                    random_state=1, \n",
+    "                                                    stratify=y)\n",
+    "X_train.shape"
    ]
   },
   {
@@ -503,19 +433,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "lr_model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "lr_model\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "lr_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Additional step added, score the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.9914878250103177\n",
+      "Testing Data Score: 0.9924164259182832\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Score the model\n",
+    "print(f\"Training Data Score: {lr_model.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {lr_model.score(X_test, y_test)}\")"
    ]
   },
   {
@@ -527,12 +497,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Prediction  Actual\n",
+       "0           0       0\n",
+       "1           0       1\n",
+       "2           0       0\n",
+       "3           0       0\n",
+       "4           0       0\n",
+       "5           0       0\n",
+       "6           0       0\n",
+       "7           0       0\n",
+       "8           0       0\n",
+       "9           0       0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "testing_predictions = lr_model.predict(X_test)\n",
+    "results = pd.DataFrame({\"Prediction\": testing_predictions, \"Actual\": y_test}).reset_index(drop=True)\n",
+    "results.head(10)\n",
+    "\n",
+    "#OR\n",
+    "#pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test}).head(10)"
    ]
   },
   {
@@ -550,32 +624,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9442676901753825"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, testing_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18679,    80],\n",
+       "       [   67,   558]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, testing_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     18759\n",
+      "           1       0.87      0.89      0.88       625\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.94      0.94      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report(y_test, testing_predictions))"
    ]
   },
   {
@@ -617,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +740,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/3f/8c_y2wf506376ylmkn2jrcvwds1jbr/T/ipykernel_15517/2969427.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import the RandomOverSampler module form imbalanced-learn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomOverSampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Instantiate the random oversampler model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # Assign a random_state parameter of 1 to the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/1q/y8jwtynn6qzf43tk_s6zpzlw0000gn/T/ipykernel_39303/2969427.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import the RandomOverSampler module form imbalanced-learn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomOverSampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Instantiate the random oversampler model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # Assign a random_state parameter of 1 to the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
      ]
     }
