--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -958,13 +958,18 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model was better at predicting the '0' label then the '1' labels. This may be due to the bias of data having 18765 \"0\" and only 619 \"1\". \n",
+    "**Answer:** The logistic regression model was better at predicting the `0` label then the `1` labels. This may be due to the bias of data having 18765 `0`s and only 619 `1`s. \n",
     "\n",
     "A balanced_accuracy_score of 95% makes one think that this is a good prediction model, as does the 99% accuracy score in the classification report.\n",
     "\n",
-    "This is mis-leading, as one should be concerned that if this model was trying to predict who is at risk of defaulting this occurs:\n",
-    " - 15% of the time (based on 0.85 precision score) the model predicted a false negative (predicted a 0 but was actually a 1), hence 56 borrowers (from the confusion matrix) who are at risk of defaulting have been MISSED in being identified.\n",
-    " - 9% of the time (based on 0.91 recall score) the model predicted a false positive (predicted a 0 but was actually a 1), hence 102 borrowers (from the confusion matrix) who are not at risk of defaulting may have been identified as at risk of defaulting creating a FALSE ALARM."
+    "Based on the confusion matrix.\n",
+    " - Total predictions = 19384\n",
+    " - Correct predictions = 19226 (18663 `0`s TN, 563 `1`s TP)\n",
+    " - Incorrect predictions = 158 (102 `0`s FP, 56 `1`s at FN)\n",
+    "\n",
+    "Based on the classification report.\n",
+    " - Precision: 15% of the time (0.85 precision score) the model predicted a false positive (predicted a `1` but was actually a `0`), hence 102 borrowers (from the confusion matrix) were identified as at risk of defaulting when they were healthy borrowers, predicting a FALSE ALARM (Type 1 error).\n",
+    " - Recall: 9% of the time (0.91 recall score) the model predicted a false negative (predicted a `0` but was actually a `1`), hence 56 borrowers (from the confusion matrix) who are at risk of defaulting have been MISSED in the prediction (Type 2 error)."
    ]
   },
   {
@@ -1274,13 +1279,18 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** **Answer:** The logistic regression model, fit with oversampled data, continued to be better at predicting the '0' label then the '1' labels, but predictions improved in accuracy, and recall by using oversampled data, with a slight decline in precision scores.\n",
+    "**Answer:** **Answer:** The logistic regression model, fit with oversampled data, continued to be better at predicting the `0` label then the `1` labels, but predictions improved in accuracy, and recall by using oversampled data, with a slight decline in precision scores.\n",
     "\n",
     "The balanced_accuracy_score improved from 95% to 99% and the accuracy score in the classification report remained at 99%.\n",
     "\n",
-    "One should still be concerned that if this model was trying to predict who is at risk of defaulting:\n",
-    " - 16% of the time (based on 0.84 precision score) the model predicted a false negative (predicted a 0 but was actually a 1), hence 10 borrowers (from the confusion matrix) who are at risk of defaulting have been MISSED in being identified.\n",
-    " - 2% of the time (based on 0.98 recall score) the model predicted a false positive (predicted a 0 but was actually a 1), hence 113 borrowers (from the confusion matrix) who are not at risk of defaulting may have been identified as at risk of defaulting creating a FALSE ALARM."
+    "Based on the confusion matrix:\n",
+    " - Total predictions = 19384\n",
+    " - Correct predictions = 19261 (18652 `0`s TN, 609 `1`s TP)\n",
+    " - Incorrect predictions = 123 (113 `0`s FP, 10 `1`s at FN)\n",
+    "\n",
+    "Based on the classification report.\n",
+    " - Precision: 16% of the time (0.84 precision score) the model predicted a false positive (predicted a `1` but was actually a `0`), hence 113 borrowers (from the confusion matrix) were identified as at risk of defaulting when they were healthy borrowers, predicting a FALSE ALARM (Type 1 error).\n",
+    " - Recall: 2% of the time (0.98 recall score) the model predicted a false negative (predicted a `0` but was actually a `1`), hence 10 borrowers (from the confusion matrix) who are at risk of defaulting have been MISSED in the prediction (Type 2 error)."
    ]
   },
   {
@@ -1288,7 +1298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Considering the features \"loan-size\", 'borrower-income\" and \"total-debt\" were much larger values to the other features the following is an exploration of how predictions would be different if I use the StandardScaler module and fit_transform function to scale all columns (except for loan_status)"
+    "#### Considering the features \"loan-size\", 'borrower-income\" and \"total-debt\" were much larger values to the other features the following is an exploration of how predictions would be different if I use the StandardScaler module and fit_transform function to scale all columns (except for loan_status)"
    ]
   },
   {
@@ -1871,9 +1881,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
+    "**Question:** How well does the logistic regression model on scaled data predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:**"
+    "**Answer:** Interestingly the results were the same as the fit with the oversampled data."
    ]
   }
  ],
