uploaded report to readme

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -1881,9 +1881,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How well does the logistic regression model on scaled data predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** Interestingly the results were the same as the fit with the oversampled data."
+    "Interestingly the results were the same as the logistic regression model fitted with the oversampled data."
    ]
   }
  ],
